Fix alignment of category pre-footer

--- a/omxgwc.css
+++ b/omxgwc.css
@@ -1,6 +1,6 @@
 /** 
  * CSS Styles for OMX Graphics Woocommerce customizations plugin
- * Version 0.12
+ * Version 0.13
  * (version above is equal with main plugin file version when this file was updated)
  */
 
@@ -175,7 +175,7 @@ ul.products li.product .astra-shop-summary-wrap h2 {
 }
 .category_pre_footer {
     padding: 50px 10px;
-    text-align: center;
+    /* text-align: center; */
     background-color: #a2a2a2;
 }
 .category_pre_footer p {
